--- a/css/style.css
+++ b/css/style.css
@@ -377,3 +377,38 @@ form button:hover {
         border: none;
     }
 }
+
+@media (max-width: 390px) {
+    #paragrafo {
+        padding: 20px 20px;
+        text-align: justify;
+        font-size: 16.5px;
+        color: #FFF;
+        border-bottom: 2px solid rgb(55, 161, 247, 0.1);
+    }
+
+    #titulo {
+        font-size: 32px;
+        text-align: center;
+        color: #FFF;
+        padding: 20px 30px;
+        text-shadow: #37a1f7 0.1rem 0.1rem 0.2rem;
+    }
+
+    .texto-habito {
+        padding: 20px 20px;
+        text-align: justify;
+        font-size: 16.5px;
+        color: #FFF;
+    }
+
+    section {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 10px 20px;
+        width: 300px;
+    }
+
+}
